# mindtrace

./: .coveragerc  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  OPENCLAW_TEST_PR.md  PR.md  PR5_IMPLEMENTATION_SPEC.md  README.md  REGISTRY_FIXES_SUMMARY.md  TESTING.md  mkdocs.yml  notes.txt  pyproject.toml  versions.json
mindtrace/agents/: README.md  pyproject.toml
mindtrace/agents/examples/: basic_agent.py  callbacks_example.py  history_example.py  streaming_example.py  tools_example.py
mindtrace/agents/mindtrace/agents/: __init__.py  _function_schema.py  _run_context.py  _tool_manager.py  prompts.py  toolkit.py
mindtrace/agents/mindtrace/agents/allowlist/: __init__.py  registry.py  signing.py
mindtrace/agents/mindtrace/agents/auth/: __init__.py  dev.py  principals.py  validators.py
mindtrace/agents/mindtrace/agents/callbacks/: __init__.py
mindtrace/agents/mindtrace/agents/catalogue/: agents.py  cli_adapter.py  tools.py
mindtrace/agents/mindtrace/agents/cli/: __init__.py  main.py  tools.py
mindtrace/agents/mindtrace/agents/composer/: __init__.py  composer.py  config.py
mindtrace/agents/mindtrace/agents/context/: __init__.py  propagation.py
mindtrace/agents/mindtrace/agents/core/: __init__.py  abstract.py  base.py  distributed.py  wrapper.py
mindtrace/agents/mindtrace/agents/distributed/: __init__.py  collector.py  gateway.py  memory_api.py  node.py  rate_limiter.py  registry.py  resilience.py  streams.py  types.py  worker.py
mindtrace/agents/mindtrace/agents/events/: __init__.py  _native.py
mindtrace/agents/mindtrace/agents/execution/: __init__.py  _queue.py  local.py  rabbitmq.py  redis.py
mindtrace/agents/mindtrace/agents/history/: __init__.py  redis.py  router.py
mindtrace/agents/mindtrace/agents/memory/: __init__.py  _store.py  in_memory.py  json_file.py  mongo.py  redis.py  toolset.py
mindtrace/agents/mindtrace/agents/messages/: __init__.py  _builder.py  _parts.py
mindtrace/agents/mindtrace/agents/models/: __init__.py  _model.py  gemini.py  openai_chat.py
mindtrace/agents/mindtrace/agents/monitor/: __init__.py  agent.py  cli.py  config.py
mindtrace/agents/mindtrace/agents/monitoring/: __init__.py  launcher.py  supervisor.py  tools.py
mindtrace/agents/mindtrace/agents/observability/: __init__.py  span.py
mindtrace/agents/mindtrace/agents/plugins/: __init__.py  providers.py  registry.py  (+1 more)
mindtrace/agents/scripts/: compare_run_vs_stream.py  gemini_example.py  play_messages_events_agent.py  runcontext_deps_example.py  service_monitor_gemini.py  service_monitor_ollama.py
mindtrace/apps/: pyproject.toml
mindtrace/apps/mindtrace/apps/: __init__.py
mindtrace/automation/: pyproject.toml
mindtrace/automation/mindtrace/: __init__.py
mindtrace/automation/mindtrace/automation/: README.md  __init__.py  app.py  convert_to_label_studio.py  create_dataset.py  cropping.py  download_images.py  export_to_datalake.py  infer_folder.py  label_studio.py  label_studio_pipeline.py  laser_to_datalake.py  service.py  spatter_datalake.py  spatter_segmentation_datalake.py  unzip.py  zone_segmentation_datalake.py
mindtrace/cluster/: README.md  pyproject.toml
mindtrace/cluster/mindtrace/cluster/: __init__.py  distributed.py  manager.py  node.py  topology.py  worker.py
mindtrace/core/: README.md  benchmarks.md  pyproject.toml  testing.md
mindtrace/core/mindtrace/core/: __init__.py  nats.py
mindtrace/core/mindtrace/testing/: __init__.py  registry.py  runner.py  types.py
mindtrace/database/: README.md  pyproject.toml
mindtrace/database/mindtrace/database/: __init__.py
mindtrace/database/tests/: conftest.py  docker-compose.yml  test_mongo.py  test_redis_odm.py
mindtrace/database/tests/mongodb/: __init__.py  test_crud.py  test_error_handling.py  test_queries.py
mindtrace/datalake/: HAPPY_PATH.md  README.md  pyproject.toml
mindtrace/datalake/mindtrace/datalake/: __init__.py  annotations.py  async_datalake.py  blocking_payload_io.py  contracts.py  data_vault.py  data_vault_backends.py  datalake.py  dataset.py  datum.py  pagination_types.py  replication.py  replication_queue.py  replication_types.py  service.py  service_types.py  sync.py  sync_types.py  types.py  upload_client.py  vault_serialization.py
mindtrace/hardware/: .dockerignore  Dockerfile.camera  README.md  __init__.py  debug-cameras.py  debug-container.bat  debug-container.sh  docker-compose.windows.yml  docker-compose.yml  pyproject.toml  start-windows-final.bat  start-windows-hybrid.bat  start.bat  start.sh
mindtrace/hardware/cameras/: camera_manager.py
mindtrace/hardware/cameras/backends/: __init__.py  base.py
mindtrace/hardware/cameras/setup/: setup_basler.py  setup_cameras.py  setup_daheng.py
mindtrace/hardware/claudedocs/: TASK-018_cli_framework_decision.md
mindtrace/hardware/core/: config.py
mindtrace/hardware/docker/camera/: .env.example  Dockerfile  README.md  entrypoint.sh
mindtrace/hardware/mindtrace/hardware/: __init__.py
mindtrace/hardware/plcs/: plc_manager.py
mindtrace/hardware/plcs/backends/: base.py
mindtrace/jobs/: README.md  __init__.py  component_responsibilities.md  example_job_manager_usage.py  example_new_consumer.py  example_orchestrator_usage.py  example_real.py  pyproject.toml  sample_jobs_demo.py  system_architecture_diagram.md
mindtrace/jobs/mindtrace/: __init__.py  consumer.py  types.py  utils.py
mindtrace/jobs/mindtrace/jobs/: __init__.py  archivers.py  consumer.py  orchestrator.py  types.py  utils.py
mindtrace/jobs/mindtrace/queue_management/: __init__.py  orchestrator.py
mindtrace/models/: README.md  pyproject.toml
mindtrace/models/mindtrace/models/: __init__.py  auto_segmenter.py  brain.py  pipeline.py  schemas.py  service.py
mindtrace/registry/: README.md  pyproject.toml
mindtrace/registry/mindtrace/registry/: __init__.py
mindtrace/services/: README.md  pyproject.toml
mindtrace/services/mindtrace/services/: README.md  __init__.py
mindtrace/ui/: README.md  pyproject.toml
samples/agents/image_quality_analyzer/: README.md  analyze.py  config.yaml  docker-compose.yml  pull_models.sh  pyproject.toml
(+2490 files in other folders)
