[project]
name = "mindtrace"
version = "0.1.0"
description = "Mindtrace monorepo with modular packages"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "mindtrace-core>=0.1.0",
  "mindtrace-jobs>=0.1.0",
  "mindtrace-registry>=0.1.0",
  "mindtrace-database>=0.1.0",
  "mindtrace-services>=0.1.0",
  "mindtrace-hardware>=0.1.0",
  "mindtrace-cluster>=0.1.0",
  "mindtrace-models>=0.1.0",
  "mindtrace-automation>=0.1.0",
  "mindtrace-apps>=0.1.0",
  "mindtrace-ui>=0.1.0",
  "mindtrace-datalake>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "fastapi>=0.115.0",
    "httpx>=0.27.2"
]

[tool.uv.sources]
mindtrace-core = { workspace = true }
mindtrace-services = { workspace = true }
mindtrace-apps = { workspace = true }
mindtrace-cluster = { workspace = true }
mindtrace-database = { workspace = true }
mindtrace-hardware = { workspace = true }
mindtrace-jobs = { workspace = true }
mindtrace-models = { workspace = true }
mindtrace-automation = { workspace = true }
mindtrace-registry = { workspace = true }
mindtrace-ui = { workspace = true }
mindtrace-datalake = { workspace = true }

[tool.uv.workspace]
members = [
  "mindtrace/core",
  "mindtrace/services",
  "mindtrace/apps",
  "mindtrace/cluster",
  "mindtrace/database",
  "mindtrace/hardware",
  "mindtrace/jobs",
  "mindtrace/models",
  "mindtrace/automation",
  "mindtrace/registry",
  "mindtrace/ui",
  "mindtrace/datalake",
]

[tool.ds.scripts]
test = """
    # Run all tests
    # ds test
    
    # Run only unit tests
    # ds test --unit
    
    # Run only integration tests
    # ds test --integration
    
    # Run specific test file or function
    # ds test tests/unit/mindtrace/registry/backends/test_minio_registry_backend.py::test_register_materializer
    
    bash scripts/run_tests.sh ${@:- --maxfail=1 --slow-last}
"""
