[project]
name = "mindtrace-agents"
version = "0.9.4"
description = "Agent framework for Mindtrace"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "mindtrace-core>=0.9.4",
]

[project.urls]
Homepage = "https://mindtrace.ai"
Repository = "https://github.com/mindtrace/mindtrace"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mindtrace*"]
