[project]
name = "mindtrace-agents"
version = "0.10.1"
description = "Agent framework for Mindtrace"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "mindtrace-core>=0.10.1",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.13.0"]
distributed-rabbitmq = ["aio-pika>=9.0"]
memory-redis = ["redis>=5.0"]
memory-vector = ["chromadb>=0.4"]

[project.urls]
Homepage = "https://mindtrace.ai"
Repository = "https://github.com/mindtrace/mindtrace"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mindtrace*"]
