[project]
name = "mindtrace-apps"
version = "0.9.4"
description = "Applications for Mindtrace"
license = "Apache-2.0"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mindtrace-core>=0.9.4",
    "mindtrace-registry>=0.9.4",
    "mindtrace-database>=0.9.4",
    "mindtrace-services>=0.9.4",
    "mindtrace-datalake>=0.9.4",
    "mindtrace-models>=0.9.4",
    "mindtrace-cluster>=0.9.4",
    "mindtrace-jobs>=0.9.4",
    "mindtrace-hardware>=0.9.4",
    "mindtrace-ui>=0.9.4",
    "mindtrace-automation>=0.9.4"
]

[project.urls]
Homepage = "https://mindtrace.ai"
Repository = "https://github.com/mindtrace/mindtrace/blob/main/mindtrace/apps"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
