[project]
name = "mindtrace-automation"
version = "0.1.0"
dependencies = [
    "mindtrace-core",
    "mindtrace-registry",
    "mindtrace-database",
    "mindtrace-services",
    "mindtrace-datalake",
    "mindtrace-models",
    "mindtrace-cluster",
    "mindtrace-storage",
    "tqdm>=4.67.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
