[project]
name = "mindtrace-cluster"
version = "0.1.0"
dependencies = [
    "mindtrace-core",
    "mindtrace-jobs",
    "mindtrace-registry",
    "mindtrace-database",
    "mindtrace-services",
    "pydantic>=2.11.1",
]

[tool.setuptools]
packages = ["mindtrace.cluster"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
