[project]
name = "mindtrace-cluster"
version = "0.9.2"
description = "Cluster management for Mindtrace"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mindtrace-core>=0.9.2",
    "mindtrace-jobs>=0.9.2",
    "mindtrace-registry>=0.9.2",
    "mindtrace-database>=0.9.2",
    "mindtrace-services>=0.9.2",
    "mindtrace-models>=0.9.2",
    "docker>=7.1.0",
]

[project.urls]
Homepage = "https://mindtrace.ai"
Repository = "https://github.com/mindtrace/mindtrace/blob/main/mindtrace/cluster"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
