[project]
name = "mindtrace-core"
version = "0.1.0"
dependencies = [
    "pillow>=11.2.1",
    "pydantic>=2.11.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["mindtrace.core"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
