[project]
name = "mindtrace-database"
version = "0.1.0"
dependencies = [
    "beanie>=1.29.0",
    "mindtrace-core",
    "redis-om>=0.3.5",
]

[tool.setuptools]
packages = ["mindtrace.database"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
