[project]
name = "mindtrace-database"
version = "0.1.0"
dependencies = [
    "beanie>=1.29.0",
    "mindtrace-core",
    "redis>=4.0.0",
    "redis-om>=0.3.5",
    "motor>=3.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools]
packages = ["mindtrace.database"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
