[project]
name = "mindtrace-datalake"
version = "0.9.1"
description = "Datalake functionality for Mindtrace"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mindtrace-core>=0.9.1",
    "mindtrace-registry>=0.9.1",
    "mindtrace-database>=0.9.1",
    "mindtrace-services>=0.9.1",
]

[project.urls]
Homepage = "https://mindtrace.ai"
Repository = "https://github.com/mindtrace/mindtrace/blob/main/mindtrace/datalake"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
