[project]
name = "mindtrace-datalake"
version = "0.10.0"
description = "Datalake functionality for Mindtrace"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mindtrace-core>=0.10.0",
    "mindtrace-registry>=0.10.0",
    "mindtrace-database>=0.10.0",
    "mindtrace-services>=0.10.0",
    "Pillow>=10.0.0",
]

[project.scripts]
mindtrace-datalake-import-pascal-voc = "mindtrace.datalake.importers.pascal_voc:main"

[project.urls]
Homepage = "https://mindtrace.ai"
Repository = "https://github.com/mindtrace/mindtrace/blob/main/mindtrace/datalake"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
