[project]
name = "mindtrace-hardware"
version = "0.1.0"
description = "Hardware abstraction layer for cameras, sensors, PLCs and other devices"
requires-python = ">=3.12"
dependencies = [
    "mindtrace-core",
    "opencv-python>=4.8.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pycomm3>=1.2.14",
    "python-snap7[cli]>=2.0.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
mindtrace-setup-cameras = "mindtrace.hardware.cameras.setup.setup_cameras:main"
mindtrace-setup-basler = "mindtrace.hardware.cameras.setup.setup_basler:install_pylon_sdk"
mindtrace-setup-daheng = "mindtrace.hardware.cameras.setup.setup_daheng:install_daheng_sdk"
mindtrace-uninstall-basler = "mindtrace.hardware.cameras.setup.setup_basler:uninstall_pylon_sdk"
mindtrace-uninstall-daheng = "mindtrace.hardware.cameras.setup.setup_daheng:uninstall_daheng_sdk"

[project.optional-dependencies]
cameras-basler = ["pypylon>=3.0.0"]
cameras-daheng = ["gxipy @ git+https://github.com/Mindtrace/gxipy.git@gxipy_deploy"]
cameras-all = ["mindtrace-hardware[cameras-basler,cameras-daheng]"]
hardware-all = ["mindtrace-hardware[cameras-all]"]
setup-tools = [
    "requests>=2.28.0",
    "tqdm>=4.64.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["mindtrace.hardware"]

[tool.setuptools.package-dir]
"mindtrace.hardware" = "."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
