[project]
name = "mindtrace-hardware"
version = "0.5.0"
description = "Hardware integration for Mindtrace"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mindtrace-core",
    "mindtrace-services",
    "mindtrace-storage",
    "opencv-python>=4.8.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pycomm3>=1.2.14",
    "python-snap7[cli]>=2.0.2",
    "click>=8.1.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.3",
    "aiomqtt>=2.4.0",
]

[project.scripts]
# Main CLI
mindtrace-hw = "mindtrace.hardware.cli.__main__:main"

# Camera commands (regular 2D cameras)
mindtrace-camera-setup = "mindtrace.hardware.cameras.setup.setup_cameras:main"
mindtrace-camera-basler-install = "mindtrace.hardware.cameras.setup.setup_basler:install_pylon_sdk"
mindtrace-camera-basler-uninstall = "mindtrace.hardware.cameras.setup.setup_basler:uninstall_pylon_sdk"
mindtrace-camera-genicam-install = "mindtrace.hardware.cameras.setup.setup_genicam:main"
mindtrace-camera-genicam-uninstall = "mindtrace.hardware.cameras.setup.setup_genicam:uninstall_main"
mindtrace-camera-genicam-verify = "mindtrace.hardware.cameras.setup.setup_genicam:verify_main"

# Stereo camera commands (3D/depth cameras)
mindtrace-stereo-basler-install = "mindtrace.hardware.stereo_cameras.setup.setup_stereo_ace:install_stereo_ace"
mindtrace-stereo-basler-uninstall = "mindtrace.hardware.stereo_cameras.setup.setup_stereo_ace:uninstall_stereo_ace"

[project.optional-dependencies]
cameras-basler = ["pypylon>=3.0.0"]
cameras-genicam = ["harvesters>=1.4.0", "genicam>=1.5.0"]
cameras-all = ["mindtrace-hardware[cameras-basler,cameras-genicam]"]
stereo-basler = ["pypylon>=3.0.0", "plyfile>=1.0.0", "open3d>=0.17.0"]
stereo-all = ["mindtrace-hardware[stereo-basler]"]
hardware-all = ["mindtrace-hardware[cameras-all,stereo-all]"]
setup-tools = [
    "requests>=2.28.0",
    "tqdm>=4.64.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://mindtrace.ai"
Repository = "https://github.com/mindtrace/mindtrace/blob/main/mindtrace/hardware"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mindtrace*"]
