[project]
name = "mindtrace-jobs"
version = "0.1.0"
dependencies = [
    "mindtrace-core",
    "pika>=1.3.2",
    "pydantic>=2.11.1",
    "redis>=5.3.0",
]

[tool.setuptools]
packages = ["mindtrace.jobs"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
