[project]
name = "mindtrace-models"
version = "0.1.0"
description = "Models for Mindtrace"
license = "Apache-2.0"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dill>=0.4.0",
    "mindtrace-core",
    "mindtrace-registry",
    "mindtrace-services",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "supervision>=0.26.0",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.168",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
