[project]
name = "mindtrace-models"
version = "0.9.4"
description = "Models for Mindtrace"
license = "Apache-2.0"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dill>=0.4.0",
    "mindtrace-core>=0.9.4",
    "mindtrace-registry>=0.9.4",
    "mindtrace-services>=0.9.4",
    "numpy>=2.3.1",
    "pydantic>=2.0",
    "torch>=2.0",
]

[project.optional-dependencies]
# Experiment tracking backends
mlflow      = ["mlflow>=2.0"]
wandb       = ["wandb>=0.16"]
tensorboard = ["tensorboard>=2.14"]

# Training extras
train = [
    "torch>=2.0",
    "torchvision>=0.15",
]

# Architecture extras
timm         = ["timm>=0.9"]
transformers = ["transformers>=4.35"]

# Model format extras
onnx = ["onnxruntime>=1.16", "onnx>=1.14"]
peft = ["peft>=0.6"]

# Archiver extras
ultralytics = ["ultralytics>=8.0"]

# Install everything
all = [
    "mlflow>=2.0",
    "wandb>=0.16",
    "tensorboard>=2.14",
    "torchvision>=0.15",
    "timm>=0.9",
    "transformers>=4.35",
    "onnxruntime>=1.16",
    "onnx>=1.14",
    "peft>=0.6",
    "ultralytics>=8.0",
]

[project.urls]
Homepage = "https://mindtrace.ai"
Repository = "https://github.com/mindtrace/mindtrace/blob/main/mindtrace/models"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
