[project]
name = "mindtrace-models"
version = "0.10.0"
description = "Models for Mindtrace"
license = "Apache-2.0"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dill>=0.4.0",
    "mindtrace-core>=0.10.0",
    "mindtrace-registry>=0.10.0",
    "mindtrace-services>=0.10.0",
    "numpy>=2.3.1",
    "pydantic>=2.0",
    "torch>=2.0",
    "tensorboard>=2.14",
    "ultralytics>=8.0",
]

[project.optional-dependencies]
# Experiment tracking backends
mlflow = ["mlflow>=2.0"]
wandb  = ["wandb>=0.16"]

# Training extras
train = ["torchvision>=0.15"]

# Architecture extras
timm         = ["timm>=0.9"]
transformers = ["transformers>=4.35"]

# Model format extras
onnx = ["onnxruntime>=1.16", "onnx>=1.14"]
peft = ["peft>=0.6"]

# Install everything
all = [
    "mlflow>=2.0",
    "wandb>=0.16",
    "torchvision>=0.15",
    "timm>=0.9",
    "transformers>=4.35",
    "onnxruntime>=1.16",
    "onnx>=1.14",
    "peft>=0.6",
]

[project.urls]
Homepage = "https://mindtrace.ai"
Repository = "https://github.com/mindtrace/mindtrace/blob/main/mindtrace/models"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
