[project]
name = "mindtrace-registry"
version = "0.7.1"
description = "Registry functionality for Mindtrace"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mindtrace-core>=0.7.1",
    "mindtrace-storage>=0.7.1",
    "minio<7.2.19",
    "pydantic>=2.11.1",
    "zenml>=0.82.1",
]

[project.optional-dependencies]
timm = ["timm>=1.0"]
huggingface = ["transformers>=4.0", "peft>=0.5"]
ultralytics = ["ultralytics>=8.0"]
onnx = ["onnx>=1.14", "onnxruntime>=1.15"]
tensorrt-cu11 = ["tensorrt-cu11>=8.6"]
tensorrt-cu12 = ["tensorrt-cu12>=10.0"]

[project.urls]
Homepage = "https://mindtrace.ai"
Repository = "https://github.com/mindtrace/mindtrace/blob/main/mindtrace/registry"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
