[project]
name = "mindtrace-services"
version = "0.1.0"
dependencies = [
    "gunicorn>=23.0.0",
    "mindtrace-core",
    "structlog>=24.4.0",
    "uvicorn>=0.34.3",
]

[tool.setuptools]
packages = ["mindtrace.services"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
