[project]
name = "mindtrace-services"
version = "0.1.0"
dependencies = [
    "mindtrace-core",
    "fastapi>=0.115.14",
    "gunicorn>=23.0.0",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "uvicorn>=0.34.3",
    "aiohttp>=3.12.13",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
