[project]
name = "mindtrace-ui"
version = "0.3.0"
description = "UI for Mindtrace"
license = "Apache-2.0"
authors = [
    {name = "Mindtrace Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "mindtrace-core",
    # Reflex dependencies for Poseidon app
    "reflex>=0.4.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sqlmodel>=0.0.16",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.1",
    "beanie>=1.29.0",
]

[project.urls]
Homepage = "https://mindtrace.ai"
Repository = "https://github.com/mindtrace/mindtrace/blob/main/mindtrace/ui"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
